# opys

./: .gitignore  .gitlab-ci.yml  .npmrc  .prettierrc  API.md  CLAUDE.md  Cargo.toml  MIGRATION.md  PLAN.md  README.md  REFACTOR.md  lanka.config.mjs  opys.config.mjs  package-lock.json  package.json  spec.md  torba.config.mjs  tsconfig.json  unifest.config.mjs  vite.config.ts  wizard.json
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
audit/: README.md  cli.md  core.md  dev.md  java.md  minecraft.md  mojang-rules.md  mojang.md  runtime.md
authliberty/: README.md  package.json
authliberty/lib/: index.ts  resolver.ts  template.ts
bifrost/: README.md  package.json
cleanroom/: README.md  package.json
cleanroom/lib/: index.ts  resolver.ts  template.ts
cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsdown.config.ts
cli/lib/: args.ts  constants.ts  fs.ts  load-config.ts  progress.ts
common/: package.json  tsconfig.json
common/lib/: enumable.ts  index.ts  inner.ts  transformable.ts
core/: CHANGELOG.md  README.md  package.json
core/lib/: artifact.ts  config.ts  discovery.ts  extract.ts  fetch.ts  filter.ts  glob.ts  index.ts  integrity.ts  interpolate.ts  launch.ts  manifest.ts  pipe.ts  pointer.ts  shorthand.ts  size.ts  source.ts  unifact.ts  unifest.ts  val.ts  valdefs.ts
crates/lanka-core/: Cargo.toml
crates/lanka-core-napi/: Cargo.toml  package.json
crates/lanka-core-napi/src/: lib.rs
crates/lanka-core/src/: artifact.rs  discovery.rs  extract.rs  glob.rs  launch.rs  lib.rs  manifest.rs  shorthand.rs  val.rs  valdefs.rs
crates/lanka-core/tests/: glob.rs  interpolate.rs  manifest.rs  shorthand.rs
crates/lanka-mojang-rules/: Cargo.toml
crates/lanka-mojang-rules/src/: lib.rs
crates/lanka-mojang-rules/tests/: edge_cases.rs  ruleset.rs
crates/lanka-mojang-rules/tests/common/: mod.rs
crates/lanka-runtime/: Cargo.toml
crates/lanka-runtime-napi/: Cargo.toml  package.json
crates/lanka-runtime-napi/src/: lib.rs
crates/opys-core/: Cargo.toml  README.md
crates/opys-core-napi/: Cargo.toml  README.md  package.json
crates/opys-core-napi/npm/darwin-arm64/: README.md  package.json
crates/opys-core-napi/npm/darwin-x64/: README.md  package.json
crates/opys-core-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/opys-core-napi/npm/linux-arm64-musl/: README.md  package.json
crates/opys-core-napi/npm/linux-x64-gnu/: README.md  package.json
crates/opys-core-napi/npm/linux-x64-musl/: README.md  package.json
crates/opys-core-napi/npm/win32-x64-msvc/: README.md  package.json
crates/opys-core-napi/src/: lib.rs
crates/opys-core/src/: artifact.rs  glob.rs  launch.rs  lib.rs  manifest.rs  shorthand.rs  val.rs  valdefs.rs
crates/opys-core/tests/: glob.rs  interpolate.rs  manifest.rs  shorthand.rs
crates/opys-mojang-rules/: Cargo.toml  README.md
crates/opys-runtime/: Cargo.toml  README.md
crates/opys-runtime-napi/: Cargo.toml  README.md  package.json
crates/opys-runtime-napi/npm/darwin-arm64/: README.md  package.json
crates/opys-runtime-napi/npm/darwin-x64/: README.md  package.json
crates/opys-runtime-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/opys-runtime-napi/npm/linux-arm64-musl/: README.md  package.json
crates/opys-runtime-napi/npm/linux-x64-gnu/: README.md  package.json
crates/opys-runtime-napi/npm/linux-x64-musl/: README.md  package.json
crates/opys-runtime-napi/npm/win32-x64-msvc/: README.md  package.json
crates/opys-runtime-napi/src/: lib.rs
crates/opys-runtime/src/: archive.rs  errors.rs  fetch.rs  install.rs  launch.rs  lib.rs  pathnorm.rs  platform.rs
crates/opys-runtime/src/phases/: extract.rs  fetch.rs  resolve.rs  resolve_discovery.rs  resolve_pointers.rs  scan.rs  sweep.rs  verify.rs
crates/opys-runtime/tests/: install_smoke.rs  sweep_scan.rs
crates/torba-core/: Cargo.toml
crates/torba-core-napi/: Cargo.toml  package.json
crates/torba-core-napi/src/: lib.rs
crates/torba-core/src/: artifact.rs  glob.rs  integrity.rs  interpolate.rs  launch.rs  lib.rs  manifest.rs  pointer.rs  shorthand.rs  source.rs  val.rs  valdefs.rs
crates/torba-core/tests/: glob.rs  interpolate.rs  manifest.rs  shorthand.rs
crates/torba-mojang-rules/: Cargo.toml
crates/torba-runtime/: Cargo.toml
crates/torba-runtime-napi/: Cargo.toml  package.json
crates/torba-runtime-napi/src/: lib.rs
crates/torba-runtime/src/: archive.rs  constants.rs  errors.rs  fetch.rs  install.rs  launch.rs  lib.rs  platform.rs
crates/torba-runtime/src/phases/: extract.rs  fetch.rs  resolve.rs  resolve_discovery.rs  resolve_pointers.rs  scan.rs  sweep.rs  verify.rs
crates/torba-runtime/tests/: install_smoke.rs
curseforge/: README.md  package.json
curseforge/lib/: index.ts  parser.ts  template.ts
dev/: package.json
dev/lib/: artifact-plugin.ts  config.ts  engine.ts  index.ts  overrides.ts  plugin.ts  scanner.ts
docs/: mapping-rust-to-ts.md
forge/: CHANGELOG.md  README.md  package.json  tsdown.config.ts
forge/lib/: index.ts  parser.ts  template.ts
installer/: README.md  package.json
installer/lib/: constants.ts  fs.ts  glob.ts  index.ts  install.ts  launch.ts  platform.ts  pool.ts  retry.ts  zip.ts
java/: README.md  package.json
java/lib/: index.ts  plugin.ts  resolver.ts  template.ts
lwjgl3ify/: README.md  package.json
lwjgl3ify/lib/: index.ts  resolver.ts  template.ts
mc/: README.md  package.json
mc/lib/: index.ts  scanner.ts  template.ts
minecraft/: CHANGELOG.md  README.md  package.json
minecraft/lib/: bifrost.ts  github.ts  index.ts  internal.ts  paths.ts  plugins.ts  scanner.ts  serverlist.ts  template.ts  version.ts
mojang/: CHANGELOG.md  README.md  package.json
mojang-rules/: CHANGELOG.md  README.md  package.json  tsconfig.json
mojang-rules/lib/: features.ts  os.ts  rule.ts  ruleset.ts  shorthand.ts  val.ts
mojang-rules/tests/: edge-cases.test.ts
mojang/lib/: index.ts  version.ts
rules/: README.md  package.json
runtime/: CHANGELOG.md  README.md  package.json  tsconfig.json
scripts/: release.mjs  smoke-napi.mjs
(+204 files in other folders)
