[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.7"
license = "MIT"
rust-version = "1.80"
repository = "https://gitlab.com/harmoniya/unifest"
homepage = "https://gitlab.com/harmoniya/unifest"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
