[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.17"
license = "MIT"
rust-version = "1.80"
repository = "https://github.com/harmoniya-net/opys"
homepage = "https://github.com/harmoniya-net/opys"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
