[package]
name = "opys-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "opys manifest data model + shorthand + Val/Valset. Reference implementation of opys.json."

[dependencies]
opys-mojang-rules = { path = "../opys-mojang-rules", version = "0.1.13" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
