[package]
name = "torba-core-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "napi-rs bindings for torba-core. Produces @torba/core's .node addon."
# cdylib for npm consumption — not consumed by Rust callers, not on crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
torba-core = { path = "../torba-core", version = "0.1.0" }
torba-mojang-rules = { path = "../torba-mojang-rules", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { version = "2", features = ["serde"] }

napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
